<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@color/other_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_password"
        android:textColor="@color/text_dark"
        android:textSize="25sp"

        />
    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_reset_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/registered_email"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
         <TextView
             android:id="@+id/tv_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="@string/cancel"
             android:layout_marginStart="10dp"
             android:textColor="@color/selver"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             />
        <TextView
            android:id="@+id/tv_sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sumbit"
            android:layout_marginEnd="10dp"
            android:textColor="@color/selver"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

</RelativeLayout>