<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:padding="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/other_background"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textColor="@color/text_dark"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_feedback_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/type_message"
            android:layout_marginTop="30dp"
            android:textSize="18sp"

            android:layout_gravity="center_vertical"
            android:textColor="@color/selver"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>