<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".SettingsActivity">
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/upper_background"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="5dp"
        android:layout_height="80dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="goToBack"
            android:layout_marginTop="20dp"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/tv_settings"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textColor="@color/text_dark"
            android:layout_marginStart="5dp"
            android:textSize="20sp"

            />

    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:background="@drawable/background">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                 android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/light_black"/>
            <TextView
                android:id="@+id/tv_persniloze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personalize"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_dark"/>
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_pen"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/black_pen"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"

                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_pen"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_light"
                        android:text="@string/change_language_of_the_app"
                        android:textSize="16sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/change"
                    android:id="@+id/tv_laguage_change"
                    android:onClick="changeLanguage"
                    android:textColor="@color/red"
                    android:textSize="14dp" />

            </RelativeLayout>
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"

                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/black_location"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:onClick="changeUserCity"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_location"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_user_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_profile"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark"/>
                    <TextView
                        android:textColor="@color/text_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_user_name_and_profile_picture"
                        android:textSize="16sp"
                        />

                </LinearLayout>


            </RelativeLayout>
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_theme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/black_theme"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_theme"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_theme"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_app_theme"
                        android:textSize="16sp"
                        android:textColor="@color/text_light"/>

                </LinearLayout>
                 <Switch
                     android:id="@+id/theme_toggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="10dp"/>

            </RelativeLayout>
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_clear_cache"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/black_delete"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:id="@+id/clear_cache_view"
                    android:layout_marginStart="10dp"
                    android:onClick="clearCache"
                    android:layout_toEndOf="@+id/img_clear_cache"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_app_cache"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark"/>


                </LinearLayout>


            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/light_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:onClick="rateUs"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/black_star"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="shareApp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/black_share"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_this_app"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:onClick="sendFeedback"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/black_feedback"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/text_dark"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="18dp"
                android:background="@color/light_black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <TextView
                android:onClick="seeAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <TextView
                android:onClick="seeVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <TextView
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/text_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <TextView
                android:onClick="seeTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"/>
            <TextView
                android:onClick="seePrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_dark"
                android:layout_marginBottom="50sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
